--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
         <title>ThreeJS Sandbox</title>
         <style>
             body { margin: 0; }
+            .controls {
+                display: block;
+                position: absolute;
+                left: 8px;
+                top: 24px;
+                text-align: left;
+                border-left: 1px solid white;
+                background-color: rgba(0, 0, 0, 0.5);
+                color: white;
+                font-family: monospace;
+                font-size: 12pt;
+                padding: 4px;
+            }
+            .line { display: block; }
         </style>
     </head>
     <body>
         <script src="js/bundle.js"></script>
+        <div class="controls">
+            <div class="line">Throttle</div>
+            <input type="range" min="1" max="40" value="1" class="slider" id="throttle">
+        </div>
     </body>
 </html>
