--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>ThreeJS Sandbox</title>
+        <title>Starry Night</title>
         <style>
             body { margin: 0; }
             .controls {
@@ -20,6 +20,7 @@
             }
             .line { display: block; }
         </style>
+	<link rel="icon" href="favicon.png">
     </head>
     <body>
         <script src="js/bundle.js"></script>
